<resources>
    <string name="app_name">Auction</string>
    <string name="img">Img</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="submit">Submit</string>
    <string name="haven_t_received_the_configuration_link">Haven\'t received the configuration link?</string>
    <string name="resend_it">Resend it</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="by_clicking_agree_you_accept_the_terms_and_conditions">By clicking \'Agree\', you accept the terms and conditions.</string>
    <string name="or">or</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="product_name">Product Name</string>
    <string name="maximum_bid">Maximum Bid</string>
    <string name="minimum_bid">Minimum Bid</string>
    <string name="submit_auction">Submit Auction</string>
    <string name="cumulonimbus">Cumulonimbus</string>
    <string name="new_offer">New Offer</string>
    <string name="rp_450_000">Rp.450.000</string>
    <string name="let_s_start_the_auction">Let’s Start The Auction!</string>
    <string name="ongoing_auctions">Ongoing Auctions</string>
    <string name="_23_00_00">00:00:00:00</string>
    <string name="product_description">Product Description</string>
    <string name="set_time">Set Time</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="empty" />
    <string name="anonymous">Anonymous</string>
    <string name="discover_the_best_art_from_nusantara">The best collection ever!</string>
    <string name="join_auction">Join Auction</string>
    <string name="no_ongoing_auction_completed">No ongoing auction completed</string>
    <string name="no_auction_click_to_add_an_auction">No more ongoing auction!</string>
    <string name="current_end">Current End</string>
    <string name="_30h_41m_18s">30H 41M 18S</string>
    <string name="description">Description</string>
    <string name="highest_bid">Highest Bid</string>
    <string name="place_a_bid">Place a Bid</string>
    <string name="amount">Amount</string>
    <string name="bid">Bid</string>
    <string name="place_bid">Place Bid</string>
    <string name="new_user">New user?</string>
    <string name="please_check_your_email_for_the_account_configuration_link">Please check your email for the account configuration link</string>
    <string name="an_account_activation_link_has_been_sent_to_your_email_address">An account activation link has been sent to your email address</string>
    <string name="open_email">Open Email</string>
</resources>