<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.fragments.CreateAuctionFragment">

    <EditText
        android:id="@+id/auction_name"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/product_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="2"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/auction_description"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/product_description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="10"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/auction_min_bid"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/minimum_bid"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/auction_max_bid"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/maximum_bid"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/auction_image"
        android:layout_width="343dp"
        android:layout_height="159dp"
        android:layout_gravity="center"
        android:contentDescription="@string/img"
        android:src="@drawable/img_20" />


    <Button
        android:id="@+id/btn_auction_submit"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_corner_btn"
        android:text="@string/submit_auction"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />


</LinearLayout>