<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.NavigationActivity">


    <ImageView
        android:layout_width="343dp"
        android:layout_height="258dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:contentDescription="@string/img"
        android:src="@drawable/nav_img" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/round_corner_btn"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/outlied_btn_style"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp" />

</LinearLayout>