<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/product_name_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="start"
        android:text="@string/place_bid"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/bid_amount"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/amount"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="2"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_bid"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_corner_btn"
        android:text="@string/bid"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />
</LinearLayout>