<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ui.activities.EmailRegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/img"
        android:src="@drawable/img_7" />

    <EditText
        android:id="@+id/ed_txt_email_register"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/please_enter_your_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/ed_txt_confirm_password_register"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/please_enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/ed_txt_password_register"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="Confirmation password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry" />

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
            android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/termsAndPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/by_clicking_agree_you_accept_the_terms_and_conditions"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

        <Button
            android:id="@+id/btn_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/round_corner_btn"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />


</LinearLayout>
</androidx.core.widget.NestedScrollView>
