<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SearchFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/discover_the_best_art_from_nusantara"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/no_auction_Frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img"
            android:src="@drawable/no_auction_found" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="cursive"
            android:text="@string/no_ongoing_auction_completed"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </FrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_margin="10dp" />
</RelativeLayout>