<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.JoinAuctionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/current_end"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/remaining_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:text="@string/_30h_41m_18s"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_corner_layout"
            android:elevation="10dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/product_img_join"
                android:layout_width="match_parent"
                android:layout_height="249dp"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop"
                android:src="@drawable/img_24" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/product_name_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="start"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="start"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/product_des_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="start"
            android:maxLines="20"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/highest_bid_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/highest_bid_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:maxLines="20"
                android:text="@string/highest_bid"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/product_price_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:maxLines="20"
                android:textColor="@color/primary_500"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <Button
            android:id="@+id/place_bid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.6"
            android:background="@drawable/round_corner_btn"
            android:padding="10dp"
            android:text="@string/place_a_bid"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


</RelativeLayout>