<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_auction_Frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img"
            android:src="@drawable/not_found"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:fontFamily="cursive"
            android:text="@string/no_auction_click_to_add_an_auction"
            android:textColor="@color/black"
            android:textColorHighlight="@color/primary_500"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.594"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.712" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/home_user_profile"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_22" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="3dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="3dp"
                android:text="@string/let_s_start_the_auction"
                android:textColor="#727272"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/ongng_auction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_layout"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:text="@string/ongoing_auctions"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ongng_auction"
        android:layout_margin="10dp"
        android:padding="10dp" />
</RelativeLayout>